--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1> هذه البوت تابع لقناة دواء القلوب</h1>
     <p>هذه هي الخطوة الأولى في رحلتنا.</p>
     <img src="my_image.png" alt="صورة توضيحية">
-    <button onclick="showMessage()">اضغط هنا</button>
+    <button onclick="showLinks()">روابطي</button>
     <script src="script.js"></script>
 </body>
 </html>
