--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <p>هذه هي الخطوة الأولى في رحلتنا.</p>
     <img src="my_image.png" alt="صورة توضيحية">
     <button onclick="showLinks()">روابطي</button>
+    <button onclick="openYouTube()">YouTube</button>
+<button onclick="openX()">X</button>
+<button onclick="openTikTok()">TikTok</button>
+<button onclick="openInstagram()">Instagram</button>
     <script src="script.js"></script>
 </body>
 </html>
