--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <button onclick="openX()">X</button>
     <button onclick="openTikTok()">TikTok</button>
     <button onclick="openInstagram()">Instagram</button>
-
+        <script src="script.js"></script>
 </body>
 </html>
