--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <button onclick="openX()">X</button>
     <button onclick="openTikTok()">TikTok</button>
     <button onclick="openInstagram()">Instagram</button>
-        <script src="script.js"></script>
+      <br>
+<input type="text" id="messageInput" placeholder="اكتب رسالتك هنا...">
+<button onclick="sendMessage()">إرسال الرسالة</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
