--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <h1> هذه البوت تابع لقناة دواء القلوب</h1>
     <p>هذه هي الخطوة الأولى في رحلتنا.</p>
     <img src="my_image.png" alt="صورة توضيحية">
-    <button onclick="openYouTube()">YouTube</button>
-    <button onclick="openX()">X</button>
-    <button onclick="openTikTok()">TikTok</button>
-    <button onclick="openInstagram()">Instagram</button>
-      <br>
-<input type="text" id="messageInput" placeholder="اكتب رسالتك هنا...">
-<button onclick="sendMessage()">إرسال الرسالة</button>
 
-  <script src="script.js"></script>
+    <div class="buttons-container">
+        <button onclick="openYouTube()">YouTube</button>
+        <button onclick="openX()">X</button>
+        <button onclick="openTikTok()">TikTok</button>
+        <button onclick="openInstagram()">Instagram</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
