--- a/index.html
+++ b/index.html
@@ -6,15 +6,26 @@
 </head>
 <body>
     <h1> هذه البوت تابع لقناة دواء القلوب</h1>
-    <p>هذه هي الخطوة الأولى في رحلتنا.</p>
+    <p class="channel-description">
+        تم إنشاء دواء القلوب وجه الله تعالى. محتوى قران كريم، مقاطع تعليميه ودروس وقصص. شاركنا الأجر والثواب.
+    </p>
     <img src="my_image.png" alt="صورة توضيحية">
 
-    <div class="buttons-container">
-        <button onclick="openYouTube()">YouTube</button>
-        <button onclick="openX()">X</button>
-        <button onclick="openTikTok()">TikTok</button>
-        <button onclick="openInstagram()">Instagram</button>
+    <div class="links-section">
+        <h2>مواقع الروابط</h2>
+        <div class="buttons-container">
+            <button class="youtube-btn" onclick="openYouTube()">YouTube</button>
+            <button class="x-btn" onclick="openX()">X</button>
+            <button class="tiktok-btn" onclick="openTikTok()">TikTok</button>
+            <button class="instagram-btn" onclick="openInstagram()">Instagram</button>
+            <button class="telegram-btn" onclick="openTelegram()">Telegram</button>
+        </div>
     </div>
+
+    <div class="news-section">
+        <h2>آخر الأخبار</h2>
+        <p>محتوى قران كريم ومقاطع تعليميه ودروس وقصص</p>
+        </div>
 
     <script src="script.js"></script>
 </body>
