--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
             <a href="index.html#updates-section">تحديثات</a>
             <a href="index.html#social-links">تابعنا</a>
             <a href="about.html">من نحن</a>
-            <a href="https://t.me/MOAZSDFGHBOT" target="_blank">تواصل معنا والمشاركة</a>
+            <a href="support.html">المشاركة والدعم</a>
             <button class="dark-mode-toggle" onclick="toggleDarkMode()">
                 <i class="fas fa-moon"></i>
             </button>
@@ -37,5 +37,8 @@
     </div>
 
     <script src="script.js"></script>
+    <footer style="text-align: center; margin-top: 40px; color: #777;">
+        <p>&copy; 2025 قناة دواء القلوب. جميع الحقوق محفوظة.</p>
+    </footer>
 </body>
 </html>
