--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#updates-section">تحديثات</a>
             <a href="#social-links">تابعنا</a>
             <a href="about.html">من نحن</a>
-            <a href="https://t.me/MOAZSDFGHBOT" target="_blank">تواصل معنا والمشاركة</a>
+            <a href="support.html">المشاركة والدعم</a>
             <button class="dark-mode-toggle" onclick="toggleDarkMode()">
                 <i class="fas fa-moon"></i>
             </button>
@@ -31,12 +31,12 @@
         <div id="social-links" class="links-section">
             <h2>تابعنا</h2>
             <div class="buttons-container">
-                <button class="youtube-btn" onclick="openYouTube()"><i class="fab fa-youtube"></i> YouTube</button>
-                <button class="x-btn" onclick="openX()"><i class="fab fa-twitter"></i> X</button>
-                <button class="tiktok-btn" onclick="openTikTok()"><i class="fab fa-tiktok"></i> TikTok</button>
-                <button class="instagram-btn" onclick="openInstagram()"><i class="fab fa-instagram"></i> Instagram</button>
-                <button class="telegram-btn" onclick="openTelegram()"><i class="fab fa-telegram-plane"></i> Telegram</button>
-                <button class="youtube-backup-btn" onclick="openYouTubeBackup()"><i class="fab fa-youtube"></i> القناة الاحتياطية</button>
+                <a href="https://youtube.com/@2_c_7_89?si=sESzRSJQ6dEsZK9P" target="_blank" class="youtube-btn social-btn"><i class="fab fa-youtube"></i> YouTube</a>
+                <a href="https://x.com/2_c_7_89?t=bIC4BE2Sq0_qM1R1ZVOjQg&s=09" target="_blank" class="x-btn social-btn"><i class="fab fa-twitter"></i> X</a>
+                <a href="https://www.tiktok.com/@2_c_7_89?_t=ZS-8zOQuHVrLpo&_r=1" target="_blank" class="tiktok-btn social-btn"><i class="fab fa-tiktok"></i> TikTok</a>
+                <a href="https://www.instagram.com/c_2_7_89?igsh=MTY1dTN3Y3Z5Mng4aA==" target="_blank" class="instagram-btn social-btn"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="https://t.me/d2_c_7_89" target="_blank" class="telegram-btn social-btn"><i class="fab fa-telegram-plane"></i> Telegram</a>
+                <a href="https://youtube.com/@2_7_8_ye?si=2fuMXjZsl7o7piBT" target="_blank" class="youtube-backup-btn social-btn"><i class="fab fa-youtube"></i> القناة الاحتياطية</a>
             </div>
         </div>
 
@@ -51,5 +51,8 @@
     </div>
 
     <script src="script.js"></script>
+    <footer style="text-align: center; margin-top: 40px; color: #777;">
+        <p>&copy; 2025 قناة دواء القلوب. جميع الحقوق محفوظة.</p>
+    </footer>
 </body>
 </html>
