--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <a href="https://x.com/2_c_7_89?t=bIC4BE2Sq0_qM1R1ZVOjQg&s=09" target="_blank" class="x-btn social-btn"><i class="fab fa-twitter"></i> X</a>
                 <a href="https://www.tiktok.com/@2_c_7_89?_t=ZS-8zOQuHVrLpo&_r=1" target="_blank" class="tiktok-btn social-btn"><i class="fab fa-tiktok"></i> TikTok</a>
                 <a href="https://www.instagram.com/c_2_7_89?igsh=MTY1dTN3Y3Z5Mng4aA==" target="_blank" class="instagram-btn social-btn"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="https://www.threads.com/@c_2_7_89" target="_blank" class="threads-btn social-btn"><i class="fab fa-threads"></i> Threads</a>
+                <a href="https://www.facebook.com/share/1Lr79FhaXT/" target="_blank" class="facebook-btn social-btn"><i class="fab fa-facebook-f"></i> Facebook</a>
                 <a href="https://t.me/d2_c_7_89" target="_blank" class="telegram-btn social-btn"><i class="fab fa-telegram-plane"></i> Telegram</a>
                 <a href="https://youtube.com/@2_7_8_ye?si=2fuMXjZsl7o7piBT" target="_blank" class="youtube-backup-btn social-btn"><i class="fab fa-youtube"></i> القناة الاحتياطية</a>
             </div>
